refactor: replace String.format with parameterized logging, fix typo in `filterRelation` method, and simplify list creation with `List.of`